--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 wallpaper = { version = "3", features = ["from_url"] }
 chrono = "0.4.24"
+reqwest = { version = "0.11.6", features = ["blocking"] }
+serde_json = "1.0"
